testing the boostrap navbar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!Doctype html>
 <html>
 <head>
+  <meta charset="utf-8"/>
   <title>chuse admin</title>
+  <!-- Bootstrap css files-->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <!--Font Family - Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700" rel="stylesheet">
 
@@ -45,6 +52,16 @@
     <!-- MDL Spinner Component -->
     <div class="page-loader mdl-spinner mdl-js-spinner is-active"></div>
   </div>
+
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" src="...">
+      </a>
+    </div>
+  </div>
+</nav>
 
   <div class="mdl-layout mdl-js-layout">
     <header class="mdl-layout__header">
@@ -118,6 +135,11 @@
       </tbody>
     </table>
   </div>
+
+  <!-- Bootstrap javascript file -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <script src="dialog-polyfill.js"></script>
 
