solving the navbar bug

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <a class="navbar-brand" href="#">
         <img alt="Brand" src="...">
       </a>
+      <span class="mdl-layout__title">CHUSE admin</span>
+      <span class="page-title-span"> | </span>
+      <span class="page-title-span">Home</span>
     </div>
   </div>
 </nav>
@@ -113,6 +116,7 @@
         </li>
       </ul>
     </div>
+  </div>
         <table align="center" class="companies-table mdl-data-table mdl-js-data-table">
       <thead>
         <tr>
