--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
       <a class="navbar-brand" href="#">
         <img alt="Brand" src="...">
       </a>
-      <span class="mdl-layout__title">CHUSE admin</span>
-      <span class="page-title-span"> | </span>
-      <span class="page-title-span">Home</span>
+      <p class="navbar-text">CHUSE admin | Home</p>
+      <button id="signOutBtn" class="navbar-right mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
+        Sign Out<i class="button-right-icon material-icons">account_circle</i>
+      </button>
     </div>
   </div>
 </nav>
