--- a/index.html
+++ b/index.html
@@ -54,70 +54,53 @@
   </div>
 
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid nav-container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="Brand" src="...">
-      </a>
-      <p class="navbar-text">CHUSE admin | Home</p>
-      <button id="signOutBtn" class="navbar-right mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
-        Sign Out<i class="button-right-icon material-icons">account_circle</i>
-      </button>
+      <p class="navbar-text"><span class="mdl-layout__title"> CHUSE admin | Home </span></p>
     </div>
+    <button id="signOutBtn" class="navbar-right mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
+      Sign Out<i class="button-right-icon material-icons">account_circle</i>
+    </button>
   </div>
 </nav>
-
-  <div class="mdl-layout mdl-js-layout">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout-icon"></div>
-      <div class="mdl-layout__header-row">
-        <span class="mdl-layout__title">CHUSE admin</span>
-        <span class="page-title-span"> | </span>
-        <span class="page-title-span">Home</span>
-        <div class="mdl-layout-spacer"></div>
-        <nav class="mdl-navigation">
-          <!-- Colored raised button -->
-          <button id="signOutBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
-            Sign Out<i class="button-right-icon material-icons">account_circle</i>
-          </button>
-        </nav>
+<div class="mdl-layout__container">
+<div class="mdl-layout mdl-js-layout">
+<div class="mdl-layout__drawer">
+  <!-- Expandable Textfield -->
+  <form action="#">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+      <label class="mdl-button mdl-js-button mdl-button--icon" for="sample6">
+        <i class="material-icons">search</i>
+      </label>
+      <div class="mdl-textfield__expandable-holder">
+        <input class="mdl-textfield__input" type="text" id="sample6">
+        <label class="mdl-textfield__label" for="sample-expandable">Expandable Input</label>
       </div>
-    </header>
-    <div class="mdl-layout__drawer">
-      <!-- Expandable Textfield -->
-      <form action="#">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-          <label class="mdl-button mdl-js-button mdl-button--icon" for="sample6">
-            <i class="material-icons">search</i>
-          </label>
-          <div class="mdl-textfield__expandable-holder">
-            <input class="mdl-textfield__input" type="text" id="sample6">
-            <label class="mdl-textfield__label" for="sample-expandable">Expandable Input</label>
-          </div>
-        </div>
-      </form>
-      <ul class="demo-list-icon mdl-list">
-        <li class="mdl-list__item">
-          <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">person</i>
-          Bryan Cranston
-      </span>
-        </li>
-        <li class="mdl-list__item">
-          <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">person</i>
-          Aaron Paul
-        </span>
-        </li>
-        <li class="mdl-list__item">
-          <span class="mdl-list__item-primary-content">
-          <i class="material-icons mdl-list__item-icon">person</i>
-          Bob Odenkirk
-        </span>
-        </li>
-      </ul>
     </div>
-  </div>
+  </form>
+  <ul class="demo-list-icon mdl-list">
+    <li class="mdl-list__item">
+      <span class="mdl-list__item-primary-content">
+      <i class="material-icons mdl-list__item-icon">person</i>
+      Bryan Cranston
+  </span>
+    </li>
+    <li class="mdl-list__item">
+      <span class="mdl-list__item-primary-content">
+      <i class="material-icons mdl-list__item-icon">person</i>
+      Aaron Paul
+    </span>
+    </li>
+    <li class="mdl-list__item">
+      <span class="mdl-list__item-primary-content">
+      <i class="material-icons mdl-list__item-icon">person</i>
+      Bob Odenkirk
+    </span>
+    </li>
+  </ul>
+</div>
+</div>
+</div>
         <table align="center" class="companies-table mdl-data-table mdl-js-data-table">
       <thead>
         <tr>
