--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <div class="s-12 l-2">
                     <div class="news-date">
                       <!--<p class="day">31</p><p class="month">MARCH</p><p class="year">2017</p>-->
-                      <p class="day">?</p><p class="month">Date to be announced></p>
+                      <p class="day">?</p><p class="month">Date to be announced</p>
                     </div>
                   </div>
                   <div class="s-12 l-10">
@@ -237,7 +237,7 @@
                   <div class="s-12 l-2">
                     <div class="news-date">
                       <!--<p class="day">7</p><p class="month">APRIL</p><p class="year">2017</p>-->
-                      <p class="day">?</p><p class="month">Date to be announced></p>
+                      <p class="day">?</p><p class="month">Date to be announced</p>
                     </div>
                   </div>
                   <div class="s-12 l-10">
