--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                   </div>
                   <div class="s-12 m-12 l-5">
                     <h3>Contact Form</h3>
-                    <form class="customform" action="">
-                      <div class="s-12"><input name="" placeholder="Your e-mail" title="Your e-mail" type="text" /></div>
-                      <div class="s-12"><input name="" placeholder="Your name" title="Your name" type="text" /></div>
-                      <div class="s-12"><textarea placeholder="Your message" name="" rows="5"></textarea></div>
-                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit">Submit</button></div>
+                    <form class="customform" action="contact.php" method="post">
+                      <div class="s-12"><input name="" placeholder="Your name" title="Your name" type="text" id="name"/></div>
+                      <div class="s-12"><input name="" placeholder="Your email" title="Your e-mail" type="email" id="email"/></div>
+                      <div class="s-12"><textarea placeholder="Your message" name="" rows="5" id="content"></textarea></div>
+                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit" id="email">Submit</button></div>
                     </form>
                   </div>
                </div>
